--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -123,9 +123,9 @@
         <!--Student Table View Controller-->
         <scene sceneID="8oC-FI-8qQ">
             <objects>
-                <tableViewController id="gmx-VX-3Yv" customClass="StudentTableViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="gmx-VX-3Yv" customClass="StudentTableViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="yzz-zA-ptB">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -143,7 +143,8 @@
                             <outlet property="delegate" destination="gmx-VX-3Yv" id="p18-oU-34e"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Vml-Rd-TrU"/>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <navigationItem key="navigationItem" id="lRe-iB-Cwg"/>
                     <connections>
                         <outlet property="studentsTableView" destination="yzz-zA-ptB" id="eCE-G6-UiD"/>
                     </connections>
@@ -291,7 +292,7 @@
         <!--List-->
         <scene sceneID="ilj-2t-Uwm">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="MXT-EW-g8J" sceneMemberID="viewController">
+                <navigationController toolbarHidden="NO" id="MXT-EW-g8J" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="List" image="list" id="Ed0-iz-Stx"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="3zQ-hq-AOb">
@@ -299,6 +300,10 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="QNP-zS-k2G">
+                        <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="gmx-VX-3Yv" kind="relationship" relationship="rootViewController" id="fCp-in-1Ai"/>
                     </connections>
@@ -310,7 +315,7 @@
         <!--Map-->
         <scene sceneID="6cS-Mp-l6H">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UXe-Ak-Yvq" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="UXe-Ak-Yvq" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Map" image="map" id="SUT-xi-5vO"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PPB-K2-FKv">
